enigmas front incorporation